--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,48 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookShelf</title>
+    <!-- Bootstap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Custom CSS -->
+     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
-    {% block content %}
 
-    {% endblock content %}
-    
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            {% block header %}
+            <header>
+                The BookShelf
+            
+            </header>
+            {% endblock %}
+        </div>
+        <div class="row min-vh-100">
+            <div class="col-md-2 d-none d-sm-block scrollwork">
+                Image
+            </div>
+            <div class="col-md-8">
+                {% block content %}
+
+                {% endblock content %}
+            </div>
+            <div class="col-md-2 d-none d-sm-block scrollwork">
+                Image
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
