--- a/templates/base.html
+++ b/templates/base.html
@@ -18,23 +18,20 @@
     <div class="container-fluid">
         <div class="row">
             {% block header %}
-            <header>
+            <header class="d-flex justify-content-center align-items-center text-center">
                 The BookShelf
-            
             </header>
             {% endblock %}
         </div>
         <div class="row min-vh-100">
-            <div class="col-md-2 d-none d-sm-block scrollwork">
-                Image
+            <div class="col-md-1 d-none d-sm-block scrollwork">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-10">
                 {% block content %}
 
                 {% endblock content %}
             </div>
-            <div class="col-md-2 d-none d-sm-block scrollwork">
-                Image
+            <div class="col-md-1 d-none d-sm-block scrollwork">
             </div>
         </div>
     </div>
