--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,14 @@
+
+/* CSS Variables */
+
+:root {
+    --parchment-color: #dbc8a4;
+    --background-color: #9b2626;
+    --accent-color: #b8860b;
+}
+
+/* Background */
+
 .scrollwork {
     background-color: #f6efe4;
     background-image: 
@@ -6,7 +17,7 @@
             to top,
             #f6efe4, 
             #e8dcc5 50%, 
-            #d9c8a8 
+            var(--parchment-color)
         );
     background-repeat: repeat-y; 
     background-size: contain; 
@@ -14,27 +25,36 @@
     height: 100vh; 
 }
 
-body {
-    background-color: #9b2626;
+.journal-center {
+    background-color: var(--background-color);
+    background-image: linear-gradient(to bottom right, var(--background-color), #972525);;
+    border-left: 4px solid var(--accent-color);
+    border-right: 4px solid var(--accent-color);
 }
 
-/* #f6efe4; parchment */
-/* background-color: #6B3E26; */
+/* Header */
 
 header {
-
     background-color: #6B3E26;
-    background-image: repeating-linear-gradient(85deg,
-            rgba(255, 255, 255, 0.03),
-            rgba(255, 255, 255, 0.03) 2px,
-            rgba(0, 0, 0, 0.03) 2px,
-            rgba(0, 0, 0, 0.03) 4px);
-    border: 3px solid #5E3722;
-    min-height: 10vh;
-    color: #f6efe4;
-
+    background-image: repeating-linear-gradient(89deg,
+            rgba(255, 255, 255, 0.001),
+            rgba(255, 255, 255, 0.001) 2px,
+            rgba(0, 0, 0, 0.06) 4px,
+            rgba(0, 0, 0, 0.06) 5px);
+    border: 4px solid #5E3722;
+    min-height: 12vh;
+    color: var(--parchment-color);
 }
 
+/* Cards */
+
 .card {
-    background-color: #f6efe4;
+     background-image: 
+        linear-gradient(
+            to top,
+            #f6efe4, 
+            #e8dcc5 50%, 
+            var(--parchment-color)
+        );
+        border: 1px solid var(--accent-color);
 }
