--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div class="row min-vh-100">
             <div class="col-md-1 d-none d-sm-block scrollwork">
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 journal-center">
                 {% block content %}
 
                 {% endblock content %}
