--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -7,7 +7,7 @@
     <div class="col-12 col-md-4">
         <div class="card my-2 shadow p-3 mb-5 bg-white rounded">
             <div class="card-body">
-                <h5 class="card-title"><a href="{% url 'review_detail' review.pk %}">
+                <h5 class="card-title text-center"><a href="{% url 'review_detail' review.pk %}">
                         <p>{{ review.book.title }}</p>
                     </a></h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">{{ review.book.authors.all|join:", " }}</h6>
