--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -8,6 +8,7 @@
             <div class="card-body">
                 <h5 class="card-title text-center">{{ review.book.title }}</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">{{ review.book.authors.all|join:", " }}</h6>
+                <h6 class="card-subtitle mb-2 text-body-secondary">{{ review.rating }}</h6>
                 <p class="card-text">{{ review.content }}...</p>
             </div>
         </div>
