Add navbar with links and logged in logic

--- a/review/templates/review/user_review_list.html
+++ b/review/templates/review/user_review_list.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
-{% block header %}
-<header>
-    USERNAME'S BOOKSHELF
-</header>
+{% block title %}
+{{ user.username }}'s BookShelf
 {% endblock %}
 {% block content %}
 <div class="row">
