--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}
+{{ user.username }}'s BookShelf
+{% endblock %}
 
 {% block content %}
 <div class="row">
