--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,10 @@
 {% load static %}
+{% url 'index' as home %}
+{% url 'user_review_list' as user_reviews %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,11 +28,48 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            {% block header %}
-            <header class="d-flex justify-content-center align-items-center text-center">
-                The BookShelf
-            </header>
-            {% endblock %}
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{ home }}">
+                        {% block title %}
+                        The BookShelf
+                        {% endblock %}
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.path == home %}active" aria-current="page{% endif %}"
+                                    href="{{ home }}">All Reviews</a>
+                            </li>
+                            {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.path == user_reviews %}active" aria-current="page
+                                    {% endif %}" href="{% url 'user_review_list' %}">My
+                                    BookShelf</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.path == logout_url %}active" aria-current="page
+                                    {% endif %}" href="{{ logout_url }}">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.path == login_url %}active" aria-current="page
+                                    {% endif %}" href="{{ login_url }}">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.path == signup_url %}active" aria-current="page
+                                    {% endif %}" href="{{ signup_url }}">Sign Up</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
         <div class="row min-vh-100">
             <div class="col-md-1 d-none d-sm-block scrollwork">
