--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,16 +39,24 @@ h6 {
     border-right: 4px solid var(--accent-color);
 }
 
-/* Header */
+/* Navbar */
 
-header {
+.custom-navbar {
     background-color: #452819;
     background-image: url('../images/woodpattern1.svg');
     border: 4px solid #452819;
     min-height: 12vh;
-    color: var(--parchment-color);
     font-family: 'Macondo', serif;
-    font-size: 2.5rem; 
+}
+
+.navbar-brand {
+    color: var(--parchment-color);
+    font-size: 2rem;
+}
+
+.nav-link {
+    color: var(--parchment-color);
+    font-size: 1.5rem;
 }
 
 /* Cards */
