--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -39,9 +39,9 @@ h6 {
     border-right: 4px solid var(--accent-color);
 }
 
-/* Header */
+/* Navbar */
 
-header {
+.custom-navbar {
     background-color: #452819;
     background-image: url('../images/woodpattern1.svg');
     border: 4px solid #452819;
