--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="{{ home }}">
                         {% block title %}
