--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -2,17 +2,25 @@
 {% load i18n %}
 {% load allauth %}
 {% load account %}
-{% block head_title %}
-    {% trans "Password Reset" %}
-{% endblock head_title %}
+{% block title %}
+{% trans "Password Reset" %}
+{% endblock title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% blocktrans %}We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
-    {% endelement %}
+<div class="row">
+    <div class="col-12">
+        <div class="card my-2 shadow p-2 mb-5 bg-white rounded">
+            <div class="card-body">
+                <h5 class="card-title text-center">{% trans "Password Reset" %}</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">{% trans 'Are you sure you want to sign out?' %}</h6>
+                <div class="card-text"> {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                    {% endif %}
+                    {% element p %}
+                    {% blocktrans %}We have sent you an email. If you have not received it please check your spam
+                    folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}
+                    {% endelement %}</div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
