--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block buttons %}
+    {% if user.is_authenticated %}
+        <button type="button" id="add-review" class="btn m-2">Add Review</button>
+    {% endif %}
+{% endblock %}
 
 {% block content %}
 <div class="row">
