--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -8,6 +8,12 @@ The BookShelf
 {% endif %}
 {% endblock %}
 
+{% block buttons %}
+    {% if user.is_authenticated %}
+        <button type="button" id="add-review" class="btn m-2">Add Review</button>
+    {% endif %}
+{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-12">
