--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,10 @@
             <div class="col-md-1 d-none d-sm-block scrollwork">
             </div>
             <div class="col-md-10 journal-center">
+                {% block buttons %}
+
+                {% endblock %}
+
                 {% block content %}
 
                 {% endblock content %}
@@ -88,6 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
     </script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
