--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,20 +90,18 @@ h6 {
 
 /* Buttons */
 
-#add-review {
+#add-review, #submitButton {
     background-color: var(--accent-color);
     font-family: var(--title-font);
     font-size: 1.5rem;
 }
 
-#add-review:focus {
+#add-review:focus, #submitButton:focus {
     background-color: #c6971a;
 }
 
-#add-review:hover {
+#add-review:hover, #submitButton:hover {
     background-color: #c6971a;
 }
 
-#add-review:focus-visible {
-    background-color: #c6971a;
-}
+
