--- a/review/templates/review/edit_review.html
+++ b/review/templates/review/edit_review.html
@@ -11,18 +11,19 @@
         <div class="card my-2 shadow p-2 mb-5 bg-white rounded">
             <div class="card-body">
                 <h5 class="card-title text-center">Edit Book Review</h5>
-                <h6 class="card-subtitle mb-2 text-body-secondary">Update your ideas</h6>
-                <h6 class="card-subtitle mb-2 text-body-secondary">
+                <h6 class="card-subtitle text-center"><strong>{{ review.book.title }}</strong></h6>
+                <h6 class="card-subtitle text-center">{{ review.book.authors.all|join:", " }}</h6>
+                <h6 class="card-subtitle my-2 text-body-secondary">
                     You cannot amend the author or book title on a review. If you have made a mistake, please delete
                     this review and create a new one.
                 </h6>
-                <p class="card-text">
+                <div class="card-text">
                     <form id="reviewForm" method="post" style="margin-top: 1.3em;">
                         {{ review_form | crispy }}
                         {% csrf_token %}
                         <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Update</button>
                     </form>
-                </p>
+                </div>
             </div>
         </div>
     </div>
