change button id to kebab case for consistency

--- a/review/templates/review/add_review.html
+++ b/review/templates/review/add_review.html
@@ -16,7 +16,7 @@
                     <form id="reviewForm" method="post" style="margin-top: 1.3em;">
                         {{ review_form | crispy }}
                         {% csrf_token %}
-                        <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
+                        <button id="submit-button" type="submit" class="btn btn-signup btn-lg">Submit</button>
                     </form>
                 </p>
             </div>
