collectstatic for deployment

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -90,20 +90,18 @@ h6 {
 
 /* Buttons */
 
-#add-review {
+#add-review, #submit-button, #edit-review {
     background-color: var(--accent-color);
     font-family: var(--title-font);
     font-size: 1.5rem;
 }
 
-#add-review:focus {
+#add-review:focus, #submit-button:focus {
     background-color: #c6971a;
 }
 
-#add-review:hover {
+#add-review:hover, #submit-button:hover {
     background-color: #c6971a;
 }
 
-#add-review:focus-visible {
-    background-color: #c6971a;
-}
+
