--- a/review/templates/review/review_detail.html
+++ b/review/templates/review/review_detail.html
@@ -27,9 +27,11 @@ The BookShelf
         </div>
     </div>
 </div>
+{% if user.is_authenticated %}
 <div class="row">
     <div class="col-12 col-md-4">
         <button type="button" id="edit-review" data-review-pk="{{ review.pk }}" class="btn m-2">Edit Review</button>
     </div>
 </div>
+{% endif %}
 {% endblock %}
