--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,3 +119,15 @@ button[type="submit"]:hover {
     background-color: #c6971a;
 }
 
+/* Alerts */
+
+.alert-warning, .alert-error {
+    background-color: #5D1717 ;
+    color: var(--parchment-color);
+    border: 1px solid var(--accent-color);
+}
+
+.alert-success {
+    background-color: var(--parchment-color);
+}
+
