--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,20 @@
             <div class="col-md-1 d-none d-sm-block scrollwork">
             </div>
             <div class="col-md-10 journal-center">
+                <!-- messages -->
+                {% if messages %}
+                    <div class="row">
+                        <div class="col-12">
+                            {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                                {{ message|safe }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert"
+                                    aria-label="Close"></button>
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
                 {% block buttons %}
 
                 {% endblock %}
