--- a/review/templates/review/index.html
+++ b/review/templates/review/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block buttons %}
-    {% if user.is_authenticated %}
-        <button type="button" id="add-review" class="btn m-2">Add Review</button>
-    {% endif %}
+{% if user.is_authenticated %}
+<button type="button" id="add-review" class="btn m-2">Add Review</button>
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -22,5 +22,17 @@
         </div>
     </div>
     {% endfor %}
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="btn"> &laquo; PREV</a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="btn"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 {% endblock %}
