--- a/review/templates/review/user_review_list.html
+++ b/review/templates/review/user_review_list.html
@@ -13,14 +13,14 @@
 {% block content %}
 <div class="row">
     {% for review in review_list %}
-    <div class="col-12 col-md-4">
-        <div class="card my-2 shadow p-2 mb-5 bg-white rounded"">
-            <div class=" card-body">
-            <h5 class="card-title text-center"><a href="{% url 'review_detail' review.pk %}">
+    <div class="col-12 col-md-4 mb-4">
+        <div class="card my-2 shadow p-2 bg-white rounded h-100">
+            <div class=" card-body d-flex flex-column">
+            <h5 class="card-title text-center mb-2"><a href="{% url 'review_detail' review.pk %}">
                     <p>{{ review.book.title }}</p>
                 </a></h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">{{ review.book.authors.all|join:", " }}</h6>
-            <h6 class="card-subtitle mb-2 text-body-secondary">{{ review.rating }}</h6>
+            <h6 class="card-subtitle mb-3 text-body-secondary">{{ review.rating }}</h6>
             <p class="card-text">{{ review.content_preview }}...</p>
         </div>
     </div>
